feat: add CI/CD for deploying project

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -28,6 +28,7 @@
   color: @basic-grey;
   z-index: -1;
   transition: @basic-animation;
+  cursor: pointer;
 }
 
 .form__input:not(:placeholder-shown) + .form__label {
@@ -41,6 +42,7 @@
   font: inherit;
   border: none;
   border-bottom: 1px solid @basic-grey;
+  cursor: pointer;
 }
 
 .form__input--textarea {
