--- a/source/less/global.less
+++ b/source/less/global.less
@@ -31,6 +31,14 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+textarea::-webkit-scrollbar {
+  display: none;
+}
+
+button {
+  cursor: pointer;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
