feat: add styling for interactive elements

--- a/source/less/blocks/breadcrumbs.less
+++ b/source/less/blocks/breadcrumbs.less
@@ -24,6 +24,14 @@
   color: @basic-grey;
 }
 
+.breadcrumbs__link[href] {
+  transition: @basic-animation;
+
+  &:hover {
+    color: @basic-black;
+  }
+}
+
 .breadcrumbs__link--active {
   color: @basic-black;
 }
