--- a/source/less/blocks/navigation.less
+++ b/source/less/blocks/navigation.less
@@ -24,4 +24,9 @@
   color: @basic-grey;
   font-weight: 700;
   letter-spacing: 0.09em;
+  transition: @basic-animation;
+
+  &:hover {
+    color: @basic-black;
+  }
 }
