--- a/source/less/blocks/logo.less
+++ b/source/less/blocks/logo.less
@@ -3,6 +3,11 @@
   margin-bottom: 37px;
   display: flex;
   justify-content: center;
+  transition: @basic-animation;
+
+  &:hover {
+    transform: scale(1.2);
+  }
 
   @media (min-width: @desktop-width) {
     position: absolute;
