--- a/source/less/blocks/search.less
+++ b/source/less/blocks/search.less
@@ -22,6 +22,15 @@
   justify-content: center;
   border: none;
   background-color: transparent;
+  cursor: pointer;
+
+  & .search__icon {
+    transition: @basic-animation;
+  }
+
+  &:hover .search__icon {
+    transform: scale(1.2);
+  }
 
   @media (min-width: @desktop-width) {
     margin-right: 20px;
