--- a/source/less/blocks/selected-items.less
+++ b/source/less/blocks/selected-items.less
@@ -38,6 +38,12 @@
   font-size: 16px;
   line-height: 18px;
   font-weight: 700;
+  transition: @basic-animation;
+  cursor: pointer;
+
+  &:hover {
+    transform: scale(1.05);
+  }
 
   @media (min-width: @desktop-width) {
     gap: 20px;
@@ -121,6 +127,11 @@
   font-weight: 400;
   justify-self: end;
   align-self: end;
+  transition: @basic-animation;
+
+  &:hover {
+    color: @error-red;
+  }
 
   @media (min-width: @desktop-width) {
     grid-column: 2/3;
