feat: implement map

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -88,8 +88,12 @@
 
 .map {
   margin-bottom: 21px;
+  width: 287px;
+  height: 200px;
 
   @media (min-width: @desktop-width) {
+    width: 555px;
+    height: 700px;
     grid-column: 2 / 3;
     grid-row: 1 / 10;
   }
