--- a/source/less/blocks/select.less
+++ b/source/less/blocks/select.less
@@ -30,13 +30,17 @@
 .select__list {
   display: none;
   position: absolute;
-  bottom: -201px;
+  bottom: -139px;
   width: 100%;
   padding: 20px;
   background-color: @basic-white;
   z-index: 2;
   border: 1px solid @basic-grey;
   border-radius: 0 0 5px 5px;
+}
+
+.select--open .select__list {
+  display: block;
 }
 
 .select__item {
