--- a/source/less/blocks/selected-items.less
+++ b/source/less/blocks/selected-items.less
@@ -38,12 +38,6 @@
   font-size: 16px;
   line-height: 18px;
   font-weight: 700;
-  transition: @basic-animation;
-  cursor: pointer;
-
-  &:hover {
-    transform: scale(1.05);
-  }
 
   @media (min-width: @desktop-width) {
     gap: 20px;
@@ -130,7 +124,7 @@
   transition: @basic-animation;
 
   &:hover {
-    color: @error-red;
+    color: @basic-black;
   }
 
   @media (min-width: @desktop-width) {
